--- a/Style.css
+++ b/Style.css
@@ -433,3 +433,77 @@ html {
 }.card:hover .back{
 	transform: perspective(500px) rotateY(360deg);
 }
+/****************  **************/
+/********    REGISTRO	  *******/
+/****************  **************/
+.register{
+	font-family: Helvetica Neue, sans-serif;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background-image: url();
+	background-position: center center;
+	background-image: no-repeat;
+	background-size: cover;
+
+	form{
+		padding: 50px;
+		display: flex;
+		flex-direction: column;
+		width: 400px;
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+		border-radius: 15px;
+		background-color: #EEEEEE;
+	
+		h2{
+			text-align: center;
+			font-size: 30px;
+			text-transform: uppercase;
+			color: #2E2E2E;
+			margin-bottom: 25px;
+		}
+	}
+	label, p{
+		font-size: 17px;
+		color: #575757;
+		margin-bottom: 10px;
+	}
+	input{
+		padding: 17px 11px;
+		border: 1px solid #00ADEF;
+		border-radius: 25px;
+		margin-bottom: 25px;
+		background-color: #FAFAFC;
+		outline: none;
+		color: #00ADEF;
+		font-size: 16px;
+	}
+	.btn-1{
+		background-color: #00ADEF;
+		font-size: 15px;
+		color: #FFFFFF;
+		text-transform: uppercase;
+		cursor: pointer;
+	}
+	.btn-1:hover{
+		background-color: #00ADEF;
+	}
+	.remember{
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 25px;
+	}
+
+	@media(max-width:991px){
+		body{
+			padding: 30px;
+		}
+
+		form{
+			width: 100%;
+		}
+	}
+}
+
+
