--- a/Style.css
+++ b/Style.css
@@ -419,7 +419,7 @@ html {
 }
 
 .card .front{
-	background:#346ea315 100%;
+	background:#346ea315 	 100%;
                 
 	transform: perspective(500px) rotateY(0deg);
 }
@@ -527,5 +527,12 @@ html {
 		}
 	}
 }
-
+footer{
+	display: flex;
+	
+	h3{
+		font-family:Helvetica, sans-serif;
+		font-size: 18px;
+	}
+}
 
