--- a/Recetas/Entradas/Entradas.css
+++ b/Recetas/Entradas/Entradas.css
@@ -269,7 +269,29 @@ html {
     padding: 15px;
     background: #fff;
     z-index: 90;
+	transition: 1.5s;
 }
 .card-cat:hover .card_landing{
     left: 100%;
 }
+
+.card_info .head{
+	padding: 5px 0;
+	border-bottom: solid 1px #bc8811;
+
+	.title{
+		font-size: 20px;
+		font-weight: 700;
+		color: #bc8811;
+	}
+	.description{
+		display: flex;
+		gap: 10px;
+	}
+	.item{
+		display: flex;
+		gap: 5px;
+		align-items: center;
+	}
+}
+
