--- a/Recetas/Entradas/Entradas.css
+++ b/Recetas/Entradas/Entradas.css
@@ -234,64 +234,111 @@ html {
 /* *************        ************* */
 /*              Tarjetas              */
 /* *************        ************* */
-.card-cat{
+.cont-cat{
+display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 4 columnas */
+  grid-template-rows: repeat(2, 1fr); /* 2 filas */
+  gap: 40px; /* Espacio entre las tarjetas */
+}
+.card {
+	left: 20px;
+	top: 50px;
     position: relative;
     width: 300px;
     height: 400px;
 }
-.card-cat .card_landing{
+
+.card .card_landing {
     position: relative;
     width: 100%;
     height: 100%;
     box-shadow: 0 5px 10px #000;
     background: linear-gradient(transparent 80%, #000), var(--i);
-    background-position:top;
+    background-position: center;
     background-size: cover;
     z-index: 100;
-
-    h6{
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        font-size: 25px;
-        color: #fff;
-    }
 }
-.card-cat .card_info{
+
+.card .card_landing h6 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 25px;
+    color: #fff;
+}
+
+.card .card_info {
     position: absolute;
     width: 90%;
-    height: 90%;
+    max-height: 90%;
     left: 0;
+    bottom: 0;
     right: 0;
     top: 0;
-    bottom: 0;
     margin: auto;
     padding: 15px;
     background: #fff;
     z-index: 90;
-	transition: 1.5s;
+    box-shadow: 0 5px 10px #000;
+    transition: .5s;
+	overflow: auto;
 }
-.card-cat:hover .card_landing{
+
+.card:hover .card_info {
     left: 100%;
 }
 
-.card_info .head{
-	padding: 5px 0;
-	border-bottom: solid 1px #bc8811;
-
-	.title{
-		font-size: 20px;
-		font-weight: 700;
-		color: #bc8811;
-	}
-	.description{
-		display: flex;
-		gap: 10px;
-	}
-	.item{
-		display: flex;
-		gap: 5px;
-		align-items: center;
-	}
+.card_info .head {
+    padding: 5px 0;
+    border-bottom: solid 1px #bc8811;
 }
 
+.card_info .head .title {
+    font-size: 20px;
+    font-weight: 700;
+    color: #bc8811;
+}
+
+.card_info .head .description {
+    display: flex;
+    gap: 10px;
+}
+
+.card_info .head .description .item {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.card_info .head .description .item i {
+    color: #bc8811;
+    font-size: 15px;
+}
+
+.card_info .head .description .item p {
+    font-size: 13px;
+}
+
+.card_info .content {
+    margin-top: 15px;
+}
+
+.card_info .content .list {
+    padding: 10px 15px;
+}
+
+.card_info .content .list li {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.card_info .action .btn {
+    padding: 10px;
+    color: #fff;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    background: #bc8811;
+    display: block;
+    margin-top: 10px;
+}
