--- a/Recetas/Entradas/Entradas.css
+++ b/Recetas/Entradas/Entradas.css
@@ -4,7 +4,6 @@
 	--primary-color: #fc5228;
 	--background-color: #f9f5f0;
 	--dark-color: #151515;
-    
 }
 
 html {
@@ -101,6 +100,11 @@ html {
 .content-shopping-cart {
 	display: flex;
 	flex-direction: column;
+}
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 /* *************        ************* */
 /*               NAVBAR               */
@@ -206,7 +210,7 @@ html {
 
 .banner {
 	background-image: linear-gradient(40deg, #000000, #00000020),
-		url('./Imagenes/Imagen_Header.jpg');
+		url('/Recetas/Imagenes_Recetas/Imagen_Header.jpg');
 	height: 60rem;
 	background-size: cover;
 	background-position: center;
@@ -226,122 +230,129 @@ html {
 }
 
 .content-banner h2 {
-	color: #fff;
+	color: #ffffff;
 	font-size: 3.5rem;
 	font-weight: 500;
 	line-height: 1.2;
 }
+
 /* *************        ************* */
 /*              Tarjetas              */
 /* *************        ************* */
 .cont-cat{
-display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 4 columnas */
-  grid-template-rows: repeat(2, 1fr); /* 2 filas */
-  gap: 40px; /* Espacio entre las tarjetas */
-}
-.card {
-	left: 20px;
-	top: 50px;
-    position: relative;
-    width: 300px;
-    height: 400px;
-}
+    display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 4 columnas */
+      grid-template-rows: repeat(1, 1fr); /* 2 filas */
+      margin-bottom: 100px;
+      gap: 40px; /* Espacio entre las tarjetas */
+    }
+    .card {
+        left: 20px;
+        top: 50px;
+        position: relative;
+        width: 300px;
+        height: 400px;
+        margin-bottom: 25px;
+    }
+    
+    .card .card_landing {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 5px 10px #000;
+        z-index: 100;
 
-.card .card_landing {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 5px 10px #000;
-    background: linear-gradient(transparent 80%, #000), var(--i);
-    background-position: center;
-    background-size: cover;
-    z-index: 100;
-}
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ajustar imagen al tamaño del contenedor */
+        }
+    }
+    
+    .card .card_landing h6 {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        font-size: 25px;
+        color: #fff;
+    }
+    
+    .card .card_info {
+        position: absolute;
+        width: 90%;
+        max-height: 90%;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        top: 0;
+        margin: auto;
+        padding: 15px;
+        background: #fff;
+        z-index: 90;
+        box-shadow: 0 5px 10px #000;
+        transition: .5s;
+        overflow: auto;
+    }
+    
+    .card:hover .card_info {
+        left: 100%;
+    }
+    
+    .card_info .head {
+        padding: 5px 0;
+        border-bottom: solid 1px #bc8811;
+    }
+    
+    .card_info .head .title {
+        font-size: 20px;
+        font-weight: 700;
+        color: #bc8811;
+    }
+    
+    .card_info .head .description {
+        display: flex;
+        gap: 10px;
+    }
+    
+    .card_info .head .description .item {
+        display: flex;
+        gap: 5px;
+        align-items: center;
+    }
+    
+    .card_info .head .description .item i {
+        color: #bc8811;
+        font-size: 15px;
+    }
+    
+    .card_info .head .description .item p {
+        font-size: 13px;
+    }
+    
+    .card_info .content {
+        margin-top: 15px;
+    }
+    
+    .card_info .content .list {
+        padding: 10px 15px;
+    }
+    
+    .card_info .content .list li {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+    
+    .card_info .action .btn {
+        padding: 10px;
+        color: #fff;
+        width: 100%;
+        text-decoration: none;
+        text-align: center;
+        background: #bc8811;
+        display: block;
+        margin-top: 10px;
+    }
 
-.card .card_landing h6 {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    font-size: 25px;
-    color: #fff;
-}
-
-.card .card_info {
-    position: absolute;
-    width: 90%;
-    max-height: 90%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    top: 0;
-    margin: auto;
-    padding: 15px;
-    background: #fff;
-    z-index: 90;
-    box-shadow: 0 5px 10px #000;
-    transition: .5s;
-	overflow: auto;
-}
-
-.card:hover .card_info {
-    left: 100%;
-}
-
-.card_info .head {
-    padding: 5px 0;
-    border-bottom: solid 1px #bc8811;
-}
-
-.card_info .head .title {
-    font-size: 20px;
-    font-weight: 700;
-    color: #bc8811;
-}
-
-.card_info .head .description {
-    display: flex;
-    gap: 10px;
-}
-
-.card_info .head .description .item {
-    display: flex;
-    gap: 5px;
-    align-items: center;
-}
-
-.card_info .head .description .item i {
-    color: #bc8811;
-    font-size: 15px;
-}
-
-.card_info .head .description .item p {
-    font-size: 13px;
-}
-
-.card_info .content {
-    margin-top: 15px;
-}
-
-.card_info .content .list {
-    padding: 10px 15px;
-}
-
-.card_info .content .list li {
-    font-size: 14px;
-    margin-bottom: 5px;
-}
-
-.card_info .action .btn {
-    padding: 10px;
-    color: #fff;
-    width: 100%;
-    text-decoration: none;
-    text-align: center;
-    background: #bc8811;
-    display: block;
-    margin-top: 10px;
-}
 /**********************************/
 /********     FOOTER     **********/
 /**********************************/
@@ -350,6 +361,7 @@ display: grid;
 	width: 100%;
 	background:var(--primary-color);
 	min-height: 100px;
+    margin-top: 60px;
 	padding: 20px 50px;
 	display: flex;
 	justify-content: center;
@@ -411,8 +423,6 @@ display: grid;
 	opacity: 0.5;
 	transition: 0.3s;
 }
-  
 .menu-icon:hover {
 	opacity: 1;
 }
-  
