--- a/Recetas/Recetas.css
+++ b/Recetas/Recetas.css
@@ -210,7 +210,7 @@ html {
 
 .banner {
 	background-image: linear-gradient(40deg, #000000, #00000020),
-		url('./Imagenes/Imagen_Header.jpg');
+		url('/Recetas/Imagenes_Recetas/Imagen_Header.jpg');
 	height: 60rem;
 	background-size: cover;
 	background-position: center;
@@ -242,7 +242,8 @@ html {
 .cont-cat{
     display: grid;
       grid-template-columns: repeat(3, 1fr); /* 4 columnas */
-      grid-template-rows: repeat(4, 1fr); /* 2 filas */
+      grid-template-rows: repeat(1, 1fr); /* 2 filas */
+      margin-bottom: 100px;
       gap: 40px; /* Espacio entre las tarjetas */
     }
     .card {
@@ -259,10 +260,13 @@ html {
         width: 100%;
         height: 100%;
         box-shadow: 0 5px 10px #000;
-        background: linear-gradient(transparent 80%, #000), var(--i);
-        background-position: center;
-        background-size: cover;
         z-index: 100;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ajustar imagen al tamaño del contenedor */
+        }
     }
     
     .card .card_landing h6 {
