--- a/Recetas/Recetas.css
+++ b/Recetas/Recetas.css
@@ -17,6 +17,14 @@ html {
 	box-sizing: border-box;
 }
 
+body {
+    background-image: url('/Imagenes/bg-home-100-scaled.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; /* Centra la imagen en el body */
+    height: 100%;
+    margin: 0; 
+}
 /* ********************************** */
 /*             UTILIDADES             */
 /* ********************************** */
@@ -239,119 +247,144 @@ html {
 /* *************        ************* */
 /*              Tarjetas              */
 /* *************        ************* */
-.cont-cat{
-    display: grid;
-      grid-template-columns: repeat(3, 1fr); /* 3 columnas */
-      grid-template-rows: repeat(1, 1fr); /* 2 filas */
-      margin-bottom: 100px;
-      gap: 40px; /* Espacio entre las tarjetas */
-    }
-    .card {
-        left: 20px;
-        top: 50px;
-        position: relative;
-        width: 300px;
-        height: 400px;
-        margin-bottom: 25px;
-    }
-    
-    .card .card_landing {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        box-shadow: 0 5px 10px #000;
-        z-index: 100;
+h1 {
+    text-align: center; 
+    margin: 40px; 
+    font-size: 2em; 
+    font-weight: bold; /* Asegura que el texto se vea bien */
+    color: #ffffff; 
+}
 
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ajustar imagen al tamaño del contenedor */
-        }
-    }
-    
-    .card .card_landing h6 {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        font-size: 25px;
-        color: #fff;
-    }
-    
-    .card .card_info {
-        position: absolute;
-        width: 90%;
-        max-height: 90%;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        top: 0;
-        margin: auto;
-        padding: 15px;
-        background: #fff;
-        z-index: 90;
-        box-shadow: 0 5px 10px #000;
-        transition: .5s;
-        overflow: auto;
-    }
-    
-    .card:hover .card_info {
-        left: 100%;
-    }
-    
-    .card_info .head {
-        padding: 5px 0;
-        border-bottom: solid 1px #bc8811;
-    }
-    
-    .card_info .head .title {
-        font-size: 20px;
-        font-weight: 700;
-        color: #bc8811;
-    }
-    
-    .card_info .head .description {
-        display: flex;
-        gap: 10px;
-    }
-    
-    .card_info .head .description .item {
-        display: flex;
-        gap: 5px;
-        align-items: center;
-    }
-    
-    .card_info .head .description .item i {
-        color: #bc8811;
-        font-size: 15px;
-    }
-    
-    .card_info .head .description .item p {
-        font-size: 13px;
-    }
-    
-    .card_info .content {
-        margin-top: 15px;
-    }
-    
-    .card_info .content .list {
-        padding: 10px 15px;
-    }
-    
-    .card_info .content .list li {
-        font-size: 14px;
-        margin-bottom: 5px;
-    }
-    
-    .card_info .action .btn {
-        padding: 10px;
-        color: #fff;
-        width: 100%;
-        text-decoration: none;
-        text-align: center;
-        background: #bc8811;
-        display: block;
-        margin-top: 10px;
-    }
+.cont-cat {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas */
+    gap: 20px; 
+    margin: 0 auto; /* Centra el contenedor en la página */
+    max-width: 1200px; 
+}
+
+.card {
+    position: relative;
+    width: 100%; 
+    max-width: 300px; 
+    height: 400px;
+    margin: auto; 
+    transition: transform 0.3s ease, opacity 0.5s ease, visibility 0.5s ease; /* Añade transición */
+    opacity: 1;
+    visibility: visible;
+}
+
+.card:hover {
+    transform: translateY(-10px); /* Efecto hover */
+}
+
+.card .card_landing {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 5px 10px #000;
+    z-index: 100;
+}
+
+.card .card_landing img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajustar imagen al tamaño del contenedor */
+}
+
+.card .card_landing h6 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 25px;
+    color: #fff;
+}
+
+.card .card_info {
+    position: absolute;
+    width: 90%;
+    max-height: 90%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    padding: 15px;
+    background: #fff;
+    z-index: 90;
+    box-shadow: 0 5px 10px #000;
+    transition: .5s;
+    overflow: auto;
+}
+
+/* Asegura que el contenido de la tarjeta activa sea visible */
+.card:hover .card_info {
+    left: 100%;
+    visibility: visible;
+}
+
+/* Oculta las otras tarjetas con un efecto de desvanecimiento */
+.card:hover ~ .card {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.card_info .head {
+    padding: 5px 0;
+    border-bottom: solid 1px #bc8811;
+}
+
+.card_info .head .title {
+    font-size: 20px;
+    font-weight: 700;
+    color: #bc8811;
+}
+
+.card_info .head .description {
+    display: flex;
+    gap: 10px;
+}
+
+.card_info .head .description .item {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.card_info .head .description .item i {
+    color: #bc8811;
+    font-size: 15px;
+}
+
+.card_info .head .description .item p {
+    font-size: 13px;
+}
+
+.card_info .content {
+    margin-top: 15px;
+}
+
+.card_info .content .list {
+    padding: 10px 15px;
+}
+
+.card_info .content .list li {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.card_info .action .btn {
+    padding: 10px;
+    color: #fff;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    background: #bc8811;
+    display: block;
+    margin-top: 10px;
+}
+
+
 
 /**********************************/
 /********     FOOTER     **********/
@@ -426,3 +459,102 @@ html {
 .menu-icon:hover {
 	opacity: 1;
 }
+
+@media (max-width: 1024px) {
+    .cont-cat {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .card {
+        margin: 20px auto; 
+    }
+}
+
+@media (max-width: 768px) {
+    .cont-cat {
+        grid-template-columns: 1fr; 
+    }
+
+    .card {
+        width: 35%; 
+        max-width: none;
+        margin: 10px auto; 
+        transition: transform 0.3s ease, opacity 0.5s ease, visibility 0.5s ease; 
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    /* Ocultar las otras tarjetas y centrar la seleccionada */
+    .card:hover {
+        transform: none;
+        margin: 0 auto; 
+    }
+
+    .card:hover ~ .card,
+    .card:hover + .card {
+        opacity: 0;
+        visibility: hidden;
+        height: 0;
+    }
+
+    .card .card_info {
+        width: 70%; 
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 1.5em; 
+    }
+
+    .cont-cat {
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .card {
+        width: 90%; 
+        max-width: none;
+        margin: 10px 0; 
+        position: relative; 
+        z-index: 1; 
+    }
+
+    .card .card_info {
+        position: static; 
+        display: none; 
+        margin-top: 20px; 
+    }
+
+    .card:hover {
+        z-index: 100; 
+    }
+
+    .card:hover .card_info {
+        display: block; 
+        height: auto; 
+    }
+
+    .card .card_landing h6 {
+        font-size: 20px; 
+    }
+
+    .card:hover ~ .card {
+        margin-top: 200px; 
+        transition: margin-top 0.3s ease;
+    }
+
+    
+    .next-section {
+        z-index: 0; 
+        position: relative; 
+    }
+}
+
+
+
+
+
+
+
